@@ -170,16 +170,20 @@ NIH_BEGIN_EXTERN
 int paused;
 
 
-Event *event_new         (const void *parent, const char *name)
+Event *        event_new         (const void *parent, const char *name)
 	__attribute__ ((warn_unused_result, malloc));
 
-int    event_match       (Event *event1, Event *event2);
+int            event_match       (Event *event1, Event *event2);
 
-Event *event_queue       (const char *name);
-void   event_queue_run   (void);
+EventEmission *event_emit (const char *name, char **args, char **env,
+			   EventEmissionCb callback, void *data)
+	__attribute__ ((malloc));
 
-Event *event_read_state  (Event *event, char *buf);
-void   event_write_state (FILE *state);
+Event *        event_queue       (const char *name);
+void           event_queue_run   (void);
+
+Event *        event_read_state  (Event *event, char *buf);
+void           event_write_state (FILE *state);
 
 NIH_END_EXTERN
 
